// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons renders Ancora properly 1`] = `
<a
  class="sc-jrQzAO hLTNwg"
>
  Teste
</a>
`;

exports[`Buttons renders Button1 properly 1`] = `
<button
  class="sc-bdvvtL hQRTiU"
>
  Teste
</button>
`;

exports[`Buttons renders Button2 properly 1`] = `
<button
  class="sc-gsDKAQ dWvCyB"
>
  Teste
</button>
`;

exports[`Buttons renders Button3 properly 1`] = `
<button
  class="sc-dkPtRN EaVla"
>
  Teste
</button>
`;

exports[`Buttons renders Button4 properly 1`] = `
<button
  class="sc-hKwDye iThMGh"
>
  Teste
</button>
`;

exports[`Buttons renders Button5 properly 1`] = `
<button
  class="sc-eCImPb bFFGJs"
>
  Teste
</button>
`;

exports[`Buttons renders Button6 properly 1`] = `
<button
  class="sc-jRQBWg fYwWpf"
>
  Teste
</button>
`;

exports[`Buttons renders Button7 properly 1`] = `
<button
  class="sc-gKclnd dGTRWn"
>
  Teste
</button>
`;

exports[`Buttons renders Button8 properly 1`] = `
<button
  class="sc-iCfMLu hvSlZD"
>
  Teste
</button>
`;

exports[`Buttons renders Li properly 1`] = `
<li
  class="sc-pVTFL fBDvNW"
>
  Teste
</li>
`;

exports[`Buttons renders Ul properly 1`] = `
<ul
  class="sc-furwcr hopZPv"
>
  Teste
</ul>
`;
